[project]
name = "llm-ollama"
version = "0.11"
description = "LLM plugin providing access to local Ollama models"
readme = "README.md"
authors = [{ name = "Sergey Alexandrov" }]
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = ["llm>=0.26a0", "ollama>=0.4.9", "pydantic>=2"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/taketwo/llm-ollama"
Changelog = "https://github.com/taketwo/llm-ollama/releases"
Issues = "https://github.com/taketwo/llm-ollama/issues"
CI = "https://github.com/taketwo/llm-ollama/actions"

[project.entry-points.llm]
ollama = "llm_ollama"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-mock"]
lint = ["black"]

[tool.setuptools.packages.find]
include = ["llm_ollama*"]
